Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-65647

Random crashes on exit

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.10.1
    • 5.10
    • WebEngine
    • None
    • a96d1fdd51a5544bab52e5dbf176d31865f0542a

      #0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51
      #1  0x00007f8be3549c2a in __GI_abort () at abort.c:89
      #2  0x00007f8be43f0efa in qt_message_fatal (context=..., message=...)
          at /home/stefan/workspaces/qt/qt5/qtbase.5.10/src/corelib/global/qlogging.cpp:1710
      #3  0x00007f8be43f1c1b in QMessageLogger::fatal (this=this@entry=0x7fffe531e600, 
          msg=msg@entry=0x40304b "Received signal %d")
          at /home/stefan/workspaces/qt/qt5/qtbase.5.10/src/corelib/global/qlogging.cpp:816
      #4  0x0000000000401d80 in sigSegvHandler (signum=11)
          at /home/stefan/workspaces/qt/qt5/qtwebengine.5.10/tests/auto/quick/qmltests/tst_qmltests.cpp:94
      #5  <signal handler called>
      #6  QScopedPointer<QQuickWebEngineHistoryListModel, QScopedPointerDeleter<QQuickWebEngineHistoryListModel> >::isNull (
          this=0x4d470ca94fa3ad75) at /opt/qt/5.10/gcc.debug/include/QtCore/qscopedpointer.h:145
      #7  QScopedPointer<QQuickWebEngineHistoryListModel, QScopedPointerDeleter<QQuickWebEngineHistoryListModel> >::operator QQuickWebEngineHistoryListModel* QScopedPointer<QQuickWebEngineHistoryListModel, QScopedPointerDeleter<QQuickWebEngineHistoryListModel> >::* (this=0x4d470ca94fa3ad75) at /opt/qt/5.10/gcc.debug/include/QtCore/qscopedpointer.h:134
      #8  QQuickWebEngineHistory::reset (this=0x10d4ab0)
          at /home/stefan/workspaces/qt/qt5/qtwebengine.5.10/src/webengine/api/qquickwebenginehistory.cpp:341
      #9  0x00007f8bf6154de3 in QQuickWebEngineViewPrivate::loadFinished (this=0x10d8c40, success=<optimized out>, url=..., 
          isErrorPage=false, errorCode=-3, errorDescription=...)
          at /home/stefan/workspaces/qt/qt5/qtwebengine.5.10/src/webengine/api/qquickwebengineview.cpp:523
      #10 0x00007f8be725b65b in QtWebEngineCore::WebContentsDelegateQt::EmitLoadFinished (this=this@entry=0x1200d60, 
          success=success@entry=false, url=..., isErrorPage=isErrorPage@entry=false, errorCode=errorCode@entry=-3, 
          errorDescription=...) at /home/stefan/workspaces/qt/qt5/qtwebengine.5.10/src/core/web_contents_delegate_qt.cpp:245
      #11 0x00007f8be725b6cf in QtWebEngineCore::WebContentsDelegateQt::didFailLoad (this=this@entry=0x1200d60, url=..., 
          errorCode=errorCode@entry=-3, errorDescription=...)
          at /home/stefan/workspaces/qt/qt5/qtwebengine.5.10/src/core/web_contents_delegate_qt.cpp:294
      #12 0x00007f8be725d098 in QtWebEngineCore::WebContentsDelegateQt::DidFinishNavigation (this=0x1200d60, 
          navigation_handle=0x122eb00)
          at /home/stefan/workspaces/qt/qt5/qtwebengine.5.10/src/core/web_contents_delegate_qt.cpp:274
      #13 0x00007f8be95b9df1 in content::WebContentsImpl::DidFinishNavigation (this=0x11de7b0, navigation_handle=0x122eb00)
          at ../../../../../../qt5/qtwebengine.5.10/src/3rdparty/chromium/content/browser/web_contents/web_contents_impl.cc:3684
      #14 0x00007f8be8b1f99d in content::NavigationHandleImpl::~NavigationHandleImpl (this=0x122eb00, 
          __in_chrg=<optimized out>)
          at ../../../../../../qt5/qtwebengine.5.10/src/3rdparty/chromium/content/browser/frame_host/navigation_handle_impl.c---Type <return> to continue, or q <return> to quit---    
      c:203
      #15 0x00007f8be8b1fe34 in content::NavigationHandleImpl::~NavigationHandleImpl (this=0x122eb00, 
          __in_chrg=<optimized out>)
          at ../../../../../../qt5/qtwebengine.5.10/src/3rdparty/chromium/content/browser/frame_host/navigation_handle_impl.cc:216
      #16 0x00007f8be736a0c2 in std::default_delete<content::NavigationHandleImpl>::operator() (this=0x11f4728, 
          __ptr=0x122eb00) at /usr/lib/gcc/x86_64-pc-linux-gnu/6.4.0/include/g++-v6/bits/unique_ptr.h:76
      #17 0x00007f8be8af5c9d in std::unique_ptr<content::NavigationHandleImpl, std::default_delete<content::NavigationHandleImpl> >::reset (this=0x11f4728, __p=0x122eb00)
          at /usr/lib/gcc/x86_64-pc-linux-gnu/6.4.0/include/g++-v6/bits/unique_ptr.h:347
      
      #18 0x00007f8be8b36900 in std::unique_ptr<content::NavigationHandleImpl, std::default_delete<content::NavigationHandleImpl> >::operator=(std::unique_ptr<content::NavigationHandleImpl, std::default_delete<content::NavigationHandleImpl> >&&) (this=0x11f4728, 
          __u=<unknown type in /opt/qt/5.10/gcc.debug/lib/libQt5WebEngineCore.so.5.10.1.debug, CU 0x11917adf, DIE 0x119d03ac>) at /usr/lib/gcc/x86_64-pc-linux-gnu/6.4.0/include/g++-v6/bits/unique_ptr.h:254
      #19 0x00007f8be8b4bc42 in content::RenderFrameHostImpl::SetNavigationHandle (this=0x11f40a0, 
          navigation_handle=std::unique_ptr<content::NavigationHandleImpl> containing 0x0)
          at ../../../../../../qt5/qtwebengine.5.10/src/3rdparty/chromium/content/browser/frame_host/render_frame_host_impl.cc:1643
      #20 0x00007f8be95a85cc in content::WebContentsImpl::~WebContentsImpl (this=0x11de7b0, __in_chrg=<optimized out>)
          at ../../../../../../qt5/qtwebengine.5.10/src/3rdparty/chromium/content/browser/web_contents/web_contents_impl.cc:616
      #21 0x00007f8be95a8f5c in content::WebContentsImpl::~WebContentsImpl (this=0x11de7b0, __in_chrg=<optimized out>)
          at ../../../../../../qt5/qtwebengine.5.10/src/3rdparty/chromium/content/browser/web_contents/web_contents_impl.cc:653
      #22 0x00007f8be72508a5 in std::default_delete<content::WebContents>::operator() (__ptr=<optimized out>, 
          this=<optimized out>) at /usr/lib/gcc/x86_64-pc-linux-gnu/6.4.0/include/g++-v6/bits/unique_ptr.h:76
      #23 std::unique_ptr<content::WebContents, std::default_delete<content::WebContents> >::reset (__p=<optimized out>, 
          this=0x11de588) at /usr/lib/gcc/x86_64-pc-linux-gnu/6.4.0/include/g++-v6/bits/unique_ptr.h:347
      #24 QtWebEngineCore::WebContentsAdapterPrivate::~WebContentsAdapterPrivate (this=0x11de570, __in_chrg=<optimized out>)
          at /home/stefan/workspaces/qt/qt5/qtwebengine.5.10/src/core/web_contents_adapter.cpp:367
      #25 0x00007f8be72509c5 in QScopedPointerDeleter<QtWebEngineCore::WebContentsAdapterPrivate>::cleanup (
          pointer=0x11de570) at /opt/qt/5.10/gcc.debug/include/QtCore/qscopedpointer.h:60
      #26 QScopedPointer<QtWebEngineCore::WebContentsAdapterPrivate, QScopedPointerDeleter<QtWebEngineCore::WebContentsAdapterPrivate> >::~QScopedPointer (this=0x11de640, __in_chrg=<optimized out>)
      ---Type <return> to continue, or q <return> to quit---
          at /opt/qt/5.10/gcc.debug/include/QtCore/qscopedpointer.h:107
      #27 QtWebEngineCore::WebContentsAdapter::~WebContentsAdapter (this=0x11de630, __in_chrg=<optimized out>)
          at /home/stefan/workspaces/qt/qt5/qtwebengine.5.10/src/core/web_contents_adapter.cpp:405
      #28 0x00007f8bf6157607 in QtSharedPointer::ExternalRefCountWithContiguousData<QtWebEngineCore::WebContentsAdapter>::deleter (self=<optimized out>) at /opt/qt/5.10/gcc.debug/include/QtCore/qsharedpointer_impl.h:255
      #29 0x00007f8bf6154356 in QtSharedPointer::ExternalRefCountData::destroy (this=0x11de620)
          at /opt/qt/5.10/gcc.debug/include/QtCore/qsharedpointer_impl.h:157
      #30 QSharedPointer<QtWebEngineCore::WebContentsAdapter>::deref (dd=0x11de620)
          at /opt/qt/5.10/gcc.debug/include/QtCore/qsharedpointer_impl.h:461
      #31 QSharedPointer<QtWebEngineCore::WebContentsAdapter>::deref (this=<optimized out>)
          at /opt/qt/5.10/gcc.debug/include/QtCore/qsharedpointer_impl.h:456
      #32 QSharedPointer<QtWebEngineCore::WebContentsAdapter>::~QSharedPointer (this=<optimized out>, 
          __in_chrg=<optimized out>) at /opt/qt/5.10/gcc.debug/include/QtCore/qsharedpointer_impl.h:313
      #33 QQuickWebEngineViewPrivate::~QQuickWebEngineViewPrivate (this=<optimized out>, __in_chrg=<optimized out>)
          at /home/stefan/workspaces/qt/qt5/qtwebengine.5.10/src/webengine/api/qquickwebengineview.cpp:154
      #34 0x00007f8bf61543a9 in QQuickWebEngineViewPrivate::~QQuickWebEngineViewPrivate (this=0x10d8c40, 
      

        For Gerrit Dashboard: QTBUG-65647
        # Subject Branch Project Status CR V

            michal Michal Klocek
            michal Michal Klocek
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes