Fix random crashes on exit

Destroy WebContentsDelegateQt before WebContents, since it
references already partly deleted WebContentsAdapterClient object.
This prevents calls by navigation handling on already destructed
web contents adapter client.

Task-number: QTBUG-65647
Task-number: QTBUG-47945
Change-Id: I0ed5887b337a43ab89ecbfe05130691b5f1f37ec
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>